@@ -1,2 +1,2 @@
 Vicenç Juan Tomàs Montserrat <vtomasr5@gmail.com>
-Eduardo Gasser <edugasser@gmail.com>
+Eduardo Andrés Gasser <edugasser@gmail.com>
