@@ -1,1 +1,1 @@
-Pràctica de Compil·ladors de sa UIB
+Pràctica de Compiladors de sa UIB
